--- a/style.css
+++ b/style.css
@@ -49,6 +49,53 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Alignments
 
 --------------------------------------------------------------*/
+@-webkit-keyframes animate {
+  0% {
+    background-size: 2px 0%, 2px 100%;
+    background-position: 0 0, 0 0;
+  }
+  50% {
+    background-size: 2px 100%, 2px 100%;
+    background-position: 0 0, 0 0;
+  }
+  100% {
+    background-size: 2px 100px, 2px 100%;
+    background-position: 0 100px, 0 0;
+  }
+}
+@keyframes animate {
+  0% {
+    background-size: 2px 0%, 2px 100%;
+    background-position: 0 0, 0 0;
+  }
+  50% {
+    background-size: 2px 100%, 2px 100%;
+    background-position: 0 0, 0 0;
+  }
+  100% {
+    background-size: 2px 100px, 2px 100%;
+    background-position: 0 100px, 0 0;
+  }
+}
+
+@-webkit-keyframes reveal {
+  0% {
+    bottom: 0;
+  }
+  100% {
+    bottom: 100%;
+  }
+}
+
+@keyframes reveal {
+  0% {
+    bottom: 0;
+  }
+  100% {
+    bottom: 100%;
+  }
+}
+
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
@@ -621,16 +668,37 @@ body .site-main .col1 {
 }
 
 body .site-main .col1 .blog {
+  position: relative;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#1181b2), to(#1181b2)), -webkit-gradient(linear, left top, left bottom, from(#696a69), to(#696a69));
+  background-image: linear-gradient(#1181b2, #1181b2), linear-gradient(#696a69, #696a69);
+  background-color: transparent;
+  background-position: 0 0, 0 0;
+  background-size: 2px 0%, 2px 100%;
+  background-repeat: no-repeat;
   height: 40px;
-  border-left: 2px solid #696a69;
   text-transform: uppercase;
   color: #26ace2;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+  -webkit-animation: animate 2s ease infinite 0.2s;
+          animation: animate 2s ease infinite 0.2s;
 }
 
 body .site-main .col1 .blog p {
   padding-left: 20px;
   padding-top: 2px;
   font-weight: bold;
+}
+
+body .site-main .col1 .blog.hovered {
+  color: white;
+  -webkit-animation: none;
+          animation: none;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(white));
+  background-image: linear-gradient(white, white);
+  background-position: 0 0;
+  background-size: 2px 100%;
+  cursor: pointer;
 }
 
 body .site-main .col2, body .site-main .col3 {
@@ -681,8 +749,8 @@ body .site-main .col2:hover h3, body .site-main .col3:hover h3 {
 }
 
 body .site-main #nav-overlay {
-  -webkit-transition: .3s all;
-  transition: .3s all;
+  -webkit-transition: .5s all;
+  transition: .5s all;
   position: fixed;
   /* Sit on top of the page content */
   width: 100%;
@@ -712,6 +780,27 @@ body .site-main #nav-overlay .nav-list {
   font-weight: bold;
   text-align: right;
   right: 25px;
+  --Bottom: 0;
+}
+
+body .site-main #nav-overlay .nav-list.bottom100 {
+  --Bottom: 100%;
+}
+
+body .site-main #nav-overlay .nav-list .nav-list-li {
+  position: relative;
+}
+
+body .site-main #nav-overlay .nav-list .nav-list-li:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: var(--Bottom);
+  background-color: white;
+  -webkit-transition: all 500ms;
+  transition: all 500ms;
 }
 
 @media only screen and (min-width: 768px) {
