--- a/style.css
+++ b/style.css
@@ -675,6 +675,103 @@ html, body {
   overflow: hidden;
 }
 
+body .page-blog #pagination {
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
+body .page-blog #pagination .prev, body .page-blog #pagination .next {
+  display: inline-block;
+}
+
+body .page-blog #pagination svg {
+  cursor: pointer;
+  fill: #ae2b24;
+}
+
+body .page-blog #pagination svg:first-child {
+  margin-right: 20px;
+}
+
+body .page-blog .readmore {
+  color: #ae2b24;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: 2px solid #ae2b24;
+  font-weight: bold;
+  right: -2px;
+  bottom: 20px;
+  position: absolute;
+  cursor: pointer;
+}
+
+body .page-blog h3 {
+  margin: 0;
+  padding-top: 20px;
+}
+
+body .page-blog .aligner {
+  content: "";
+  height: 70px;
+  background-color: #1181b2;
+}
+
+body .page-blog .post-cont {
+  padding: 0 20px 0 20px;
+  height: calc(33vh - 50px);
+  height: calc(var(--vh, 1vh) * 33 - 21px);
+  position: relative;
+}
+
+body .page-blog .post-blue {
+  background-color: #1181b2;
+}
+
+body .page-blog .post-blue h3 {
+  color: #26ace2;
+}
+
+body .page-blog .post-blue p {
+  color: white;
+}
+
+body .page-blog .post-blue .readmore {
+  color: #212221;
+  border-color: #212221;
+}
+
+body .page-blog .post-grey {
+  background-color: #212221;
+}
+
+body .page-blog .post-grey h3 {
+  color: white;
+}
+
+body .page-blog .post-grey p {
+  color: white;
+}
+
+body .page-blog .post-grey .readmore {
+  color: #ffffff;
+  border-color: #ffffff;
+}
+
+body .page-blog .post-white {
+  background-color: white;
+}
+
+body .page-blog .post-white p {
+  color: #696a69;
+}
+
+body .page-blog .post-white .readmore {
+  color: #212221;
+  border-color: #212221;
+}
+
 body .page-services .services {
   display: -webkit-box;
   display: -ms-flexbox;
