--- a/style.css
+++ b/style.css
@@ -515,7 +515,8 @@ big {
 /* Elements
 --------------------------------------------- */
 .site-header {
-  position: absolute;
+  top: 0;
+  position: fixed;
   padding: 0 20px 0 20px;
   padding-top: 15px;
   z-index: 10;
@@ -673,134 +674,112 @@ big {
 
 html, body {
   overflow: hidden;
+  height: 100%;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
-body .page-blog #pagination {
-  text-align: center;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
+  /* Chrome Safari */
 }
 
-body .page-blog #pagination .prev, body .page-blog #pagination .next {
-  display: inline-block;
+body .page-blog a:link, body .page-blog a:visited {
+  color: inherit;
 }
 
-body .page-blog #pagination svg {
-  cursor: pointer;
-  fill: #ae2b24;
-}
-
-body .page-blog #pagination svg:first-child {
-  margin-right: 20px;
-}
-
-body .page-blog .readmore {
-  color: #ae2b24;
-  text-transform: uppercase;
-  background-color: transparent;
-  border: 2px solid #ae2b24;
-  font-weight: bold;
-  right: -2px;
-  bottom: 20px;
-  position: absolute;
-  cursor: pointer;
-}
-
-body .page-blog h3 {
+body .page-blog ul {
   margin: 0;
-  padding-top: 20px;
+  padding: 0;
 }
 
-body .page-blog .aligner {
-  content: "";
-  height: 70px;
-  background-color: #1181b2;
+body .page-blog .blog-col1 {
+  position: absolute;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  height: 100vh;
+  width: 66.66vw;
+  float: left;
 }
 
-body .page-blog .post-cont {
-  padding: 0 20px 0 20px;
-  height: calc(33vh - 50px);
-  height: calc(var(--vh, 1vh) * 33 - 21px);
-  position: relative;
+body .page-blog .blog-col1::-webkit-scrollbar {
+  display: none;
+  /* Chrome Safari */
 }
 
-body .page-blog .post-cont p {
+body .page-blog .blog-col1 .blog-list {
+  margin: 20vh 0 0 0;
+  padding-left: 30px;
+  line-height: 2em;
+  color: black;
+  width: 100%;
+}
+
+body .page-blog .blog-col1 .blog-list .post-cat {
+  font-weight: bold;
+  color: rgba(105, 106, 105, 0.5);
+  margin: 0;
+  display: inline-block;
+  padding: 0;
   font-size: 12px;
-  font-weight: 400;
 }
 
-body .page-blog .post-cont h3 {
-  font-size: 16px;
+body .page-blog .blog-col1 .post-cont {
+  background-color: rgba(105, 106, 105, 0.1);
+  margin-bottom: 20px;
+  width: 100%;
+  padding: 15px 20px 2px 20px;
 }
 
-body .page-blog .post-cont button {
-  font-size: 12px;
+body .page-blog .blog-col1 .post-cont h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 145%;
 }
 
-body .page-blog .post-blue {
-  background-color: #1181b2;
-}
-
-body .page-blog .post-blue h3 {
+body .page-blog .blog-col1 .post-cont h3:hover {
   color: #26ace2;
 }
 
-body .page-blog .post-blue p {
-  color: white;
+body .page-blog .blog-col1 .post-cont p {
+  padding: 0;
+  font-size: 12px;
+  line-height: 145%;
 }
 
-body .page-blog .post-blue .readmore {
-  color: #212221;
-  border-color: #212221;
+body .page-blog .blog-col2 {
+  float: right;
+  width: 33.33vw;
+  height: 100vh;
+  background-color: #26ace2;
 }
 
-body .page-blog .post-grey {
-  background-color: #212221;
+body .page-blog .blog-col2 h3 {
+  bottom: 0;
+  right: 0.55em;
+  position: fixed;
+  padding-top: 150px;
+  color: rgba(17, 129, 178, 0.5);
+  font-size: 30vw;
+  text-align: center;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  text-orientation: mixed;
+  text-transform: uppercase;
+  line-height: 0;
+  margin: 0;
+  mix-blend-mode: multiply;
 }
 
-body .page-blog .post-grey h3 {
-  color: white;
-}
-
-body .page-blog .post-grey p {
-  color: white;
-}
-
-body .page-blog .post-grey .readmore {
-  color: #ffffff;
-  border-color: #ffffff;
-}
-
-body .page-blog .post-white {
-  background-color: white;
-}
-
-body .page-blog .post-white p {
-  color: #696a69;
-}
-
-body .page-blog .post-white .readmore {
-  color: #212221;
-  border-color: #212221;
-}
-
-@media only screen and (min-width: 768px) {
-  body .page-blog .post-cont {
-    padding: 50px 107px 20px 43px;
-  }
-  body .page-blog .post-cont p {
-    font-size: 16px;
-    margin-top: 25px;
-    line-height: 1.65em;
-    letter-spacing: 0.5px;
-  }
-  body .page-blog .post-cont h3 {
-    font-size: 24px;
-  }
-  body .page-blog .post-cont button {
-    font-size: 16px;
-  }
+body .page-blog .blog-col2 ul {
+  padding-top: 30vh;
+  list-style: none;
+  text-align: right;
+  font-size: 14px;
 }
 
 body .page-services .services {
@@ -1054,7 +1033,7 @@ body .site-main #nav-overlay {
   right: 0;
   bottom: 0;
   background-color: white;
-  z-index: 7;
+  z-index: 4;
   /* Specify a stack order in case you're using a different order for other elements */
 }
 
