--- a/style.css
+++ b/style.css
@@ -684,6 +684,37 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
   /* Chrome Safari */
 }
 
+@media screen and (min-width: 768px) {
+  body.page-template-page-blog .site-main #nav-overlay {
+    left: 0;
+    width: 0;
+  }
+  body.page-template-page-blog .site-main #nav-overlay.open {
+    left: 0;
+  }
+  body.page-template-page-blog .site-main #nav-overlay ul {
+    padding-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body.page-template-page-blog .site-main #nav-overlay {
+    left: 66.66vw;
+    width: 0;
+  }
+  body.page-template-page-blog .site-main #nav-overlay.open {
+    left: 66.66vw;
+    width: 33.33vw;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body.page-template-page-blog #nav-btn {
+    left: auto;
+    right: -30vw;
+  }
+}
+
 body .page-blog a:link, body .page-blog a:visited {
   color: inherit;
 }
@@ -720,6 +751,12 @@ body .page-blog .blog-col1 .blog-list {
 @media screen and (min-width: 768px) {
   body .page-blog .blog-col1 .blog-list {
     padding-left: 80px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body .page-blog .blog-col1 .blog-list {
+    padding-left: 15vw;
   }
 }
 
@@ -825,7 +862,7 @@ body .page-blog .blog-col2 h3 {
 
 body .page-blog .blog-col2 ul {
   padding-right: 5px;
-  padding-top: 30vh;
+  padding-top: 25vh;
   list-style: none;
   text-align: right;
   font-size: 12px;
@@ -835,16 +872,50 @@ body .page-blog .blog-col2 ul {
   text-transform: uppercase;
 }
 
+body .page-blog .blog-col2 ul h4 {
+  mix-blend-mode: darken;
+  color: rgba(0, 0, 0, 0.4);
+  text-transform: none;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 768px) {
+  body .page-blog .blog-col2 ul h4 {
+    font-size: 25px;
+  }
+}
+
+@media screen and (min-width: 1200) {
+  body .page-blog .blog-col2 ul h4 {
+    font-size: 26px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   body .page-blog .blog-col2 ul {
     font-size: 20px;
     text-align: center;
     line-height: 150%;
+    padding-top: 20vh;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body .page-blog .blog-col2 ul {
+    text-align: left;
+    padding-left: 35px;
+    padding-top: 22vh;
   }
 }
 
 body .page-blog .blog-col2 ul li {
   padding-bottom: 8px;
+}
+
+body .page-blog .blog-col2 ul li:hover {
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-transition: all 320ms;
+  transition: all 320ms;
 }
 
 body .page-services .services {
